<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <!--    not used by mee  ///////-->
    <!--    <ImageView-->
    <!--        android:id="@+id/logo"-->
    <!--        android:layout_width="100dp"-->
    <!--        android:layout_height="100dp"-->
    <!--        android:src="@mipmap/ic_launcher"-->
    <!--        android:layout_centerHorizontal="true"-->
    <!--        android:layout_marginTop="50dp"/>-->

    <!--    <TextView-->
    <!--        android:id="@+id/textheading"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="Chat App sent OTP to your phone number"-->
    <!--        android:textSize="20sp"-->
    <!--        android:textAlignment="center"-->
    <!--        android:textStyle="bold"-->
    <!--        android:padding="20dp"-->
    <!--        android:textColor="@color/black"-->
    <!--        android:layout_below="@+id/logo"/>-->

    <!--    <RelativeLayout-->
    <!--        android:id="@+id/centerHorizontalLine"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_centerVertical="true"/>-->

    <!--    <com.hbb20.CountryCodePicker-->
    <!--        android:id="@+id/countryCodePicker"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="50dp"-->
    <!--        app:ccp_areaCodeDetectedCountry="true"-->
    <!--        android:layout_centerInParent="true"-->
    <!--        android:layout_marginLeft="100dp"-->
    <!--        android:layout_marginRight="100dp"-->
    <!--        app:ccp_autoDetectCountry="true"-->
    <!--        android:layout_marginBottom="10dp"-->
    <!--        android:layout_above="@+id/centerHorizontalLine"/>-->


    <!--    <EditText-->
    <!--        android:id="@+id/getPhoneNumberEd"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="50dp"-->
    <!--        android:layout_marginLeft="70dp"-->
    <!--        android:layout_marginRight="70dp"-->
    <!--        android:textAlignment="center"-->
    <!--        android:inputType="number"-->
    <!--        android:textColor="@color/black"-->
    <!--        android:hint="Enter Your Number"-->
    <!--        android:layout_marginTop="10dp"-->
    <!--        android:layout_below="@id/centerHorizontalLine"/>-->

    <!--    <Button-->
    <!--        android:id="@+id/sendOTPBt"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="40dp"-->
    <!--        android:layout_below="@id/getPhoneNumberEd"-->
    <!--        android:layout_centerHorizontal="true"-->
    <!--        android:layout_marginTop="30dp"-->
    <!--        android:textColor="@color/black"-->
    <!--        android:paddingLeft="40dp"-->
    <!--        android:paddingRight="40dp"-->
    <!--        android:background="@color/black"-->
    <!--        android:text="Send OTP"-->
    <!--        android:textSize="15sp"/>-->

    <!--    <ProgressBar-->
    <!--        android:id="@+id/progressMain"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_centerHorizontal="true"-->
    <!--        android:layout_below="@id/sendOTPBt"-->
    <!--        android:layout_marginTop="30dp"/>-->


    <!--    /////////////////////////////////////////////////////-->


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animatin"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:adjustViewBounds="true"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                android:visibility="visible"
                app:lottie_rawRes="@raw/animation" />

            <pl.droidsonroids.gif.GifImageView
                android:id="@+id/otp_gif"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:background="@android:color/transparent"
                android:backgroundTint="@android:color/transparent"
                android:src="@drawable/otp"
                android:layout_marginTop="50dp"
                android:visibility="gone"
                android:layout_gravity="center"/>


            <TextView
                android:id="@+id/verificatinTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/otp_verification"
                android:textAlignment="center"
                android:textColor="#035B27"
                android:textSize="22sp"
                android:textStyle="bold" />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="6dp"
                    android:text="@string/we_will_send_you_an"
                    android:textColor="#3C3B3B"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/one_time_password"
                    android:textColor="#1D1B1B"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="6dp"
                android:text="@string/on_this_mobile_number"
                android:textAlignment="center"
                android:textColor="#3C3B3B"
                android:textSize="16sp"
                android:textStyle="normal" />


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                app:cardElevation="10dp"
                app:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp">

                    <!--RelativeLayout: phone number input -->
                    <RelativeLayout
                        android:id="@+id/phoneInputRl"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15sp"
                        android:visibility="visible">

                        <!--CountryCodePicker: to pick country code for the phone number -->
                        <com.hbb20.CountryCodePicker
                            android:id="@+id/phoneCodeTil"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_marginEnd="8dp"
                            android:gravity="center"
                            android:minWidth="60dp"
                            android:minHeight="56dp"
                            app:ccp_autoDetectCountry="true"
                            app:ccp_contentColor="@color/black"
                            app:ccp_rememberLastSelection="true"
                            app:ccp_showFlag="true"
                            app:ccp_showNameCode="true" />


                        <!--TextInputLayout: Input Phone Number -->
                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/phoneNumberTil"
                            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@id/phoneCodeTil"
                            android:hint="Phone Number..!!"
                            app:boxCornerRadiusBottomEnd="8dp"
                            app:boxCornerRadiusBottomStart="8dp"
                            app:boxCornerRadiusTopEnd="8dp"
                            app:boxCornerRadiusTopStart="8dp"
                            app:startIconDrawable="@drawable/baseline_keyboard_24">

                            <EditText
                                android:id="@+id/phoneNumberEt"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="phone" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <!--MaterialButton: Click to send OTP to input phone number
                          -->
                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/sendOtpBtn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/phoneNumberTil"
                            android:layout_marginTop="10dp"
                            android:minHeight="60dp"
                            android:text="Send OTP..!"
                            app:cornerRadius="8dp" />

                    </RelativeLayout>

                    <!-- RelativeLayout: OTP Input-->
                    <RelativeLayout
                        android:id="@+id/optInputRl"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:visibility="invisible">

                        <!--                    &lt;!&ndash;TextInputLayout: Input otp for phone number verification&ndash;&gt;-->
                        <!--                    <com.google.android.material.textfield.TextInputLayout-->
                        <!--                        android:id="@+id/otpTil"-->
                        <!--                        android:layout_width="match_parent"-->
                        <!--                        android:layout_height="wrap_content"-->
                        <!--                        style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"-->
                        <!--                        app:boxCornerRadiusBottomEnd="8dp"-->
                        <!--                        app:boxCornerRadiusBottomStart="8dp"-->
                        <!--                        app:boxCornerRadiusTopEnd="8dp"-->
                        <!--                        app:boxCornerRadiusTopStart="8dp"-->
                        <!--                        app:startIconDrawable="@drawable/baseline_message_24">-->

                        <!--                        <EditText-->
                        <!--                            android:id="@+id/otpEt"-->
                        <!--                            android:layout_width="match_parent"-->
                        <!--                            android:layout_height="wrap_content"-->
                        <!--                            android:inputType="number"-->
                        <!--                            android:maxLength="6"/>-->

                        <!--                    </com.google.android.material.textfield.TextInputLayout>-->


                        <!--MaterialButton: Click to verify otp send to phone number -->
                        <!--                    <com.google.android.material.button.MaterialButton-->
                        <!--                        android:id="@+id/verifyOtpBtn"-->
                        <!--                        android:layout_width="match_parent"-->
                        <!--                        android:layout_height="wrap_content"-->
                        <!--                        app:cornerRadius="8dp"-->
                        <!--                        android:textAlignment="center"-->
                        <!--                        android:gravity="center"-->
                        <!--                        android:text="Verify..!!"-->
                        <!--                        android:drawableLeft="@drawable/baseline_phonelink_ring_24"-->
                        <!--                        android:layout_below="@id/otpTil"-->
                        <!--                        android:layout_marginTop="10dp"-->
                        <!--                        android:minHeight="60dp"/>-->

                        <!--TextView: Resend OTP-->
                        <!--                    <TextView-->
                        <!--                        android:id="@+id/resendotpTv"-->
                        <!--                        android:layout_width="wrap_content"-->
                        <!--                        android:layout_height="wrap_content"-->
                        <!--                        style="@style/TextAppearance.MaterialComponents.Caption"-->
                        <!--                        android:text="@string/does_not_recieve_otp_resend"-->
                        <!--                        android:layout_below="@id/verifyOtpBtn"-->
                        <!--                        android:padding="5dp"-->
                        <!--                        android:layout_centerHorizontal="true"/>-->


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:background="@color/white"
                            android:gravity="center"
                            android:padding="10dp"
                            android:orientation="vertical">

                            <com.mukeshsolanki.OtpView
                                android:id="@+id/otpEt"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:focusableInTouchMode="true"
                                android:inputType="number"
                                android:itemBackground="#D1DBFC"
                                android:textAllCaps="true"
                                android:textColor="@color/black"
                                app:OtpHideLineWhenFilled="true"
                                app:OtpItemCount="6"
                                app:OtpItemSpacing="5dp"
                                app:OtpLineColor="@color/black"
                                app:OtpState_filled="true"
                                app:OtpViewType="line" />

                            <!--MaterialButton: Click to send OTP to input phone number
                     -->
                            <com.google.android.material.button.MaterialButton
                                android:id="@+id/verifyOtpBtn"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:minHeight="60dp"
                                android:text="Continue..."
                                android:textAllCaps="false"
                                android:textSize="16dp"
                                android:textStyle="bold|normal"
                                app:cornerRadius="8dp" />

<!--                            TextView: Resend OTP-->

                            <TextView
                                android:id="@+id/resendotpTv"
                                style="@style/TextAppearance.MaterialComponents.Caption"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/verifyOtpBtn"
                                android:layout_centerHorizontal="true"
                                android:padding="5dp"
                                android:text="@string/does_not_recieve_otp_resend" />

                        </LinearLayout>


                    </RelativeLayout>


                </RelativeLayout>


            </androidx.cardview.widget.CardView>


        </LinearLayout>

    </ScrollView>

</RelativeLayout>